Fix: typos and font-size

--- a/_includes/layouts/talks-and-workshops.njk
+++ b/_includes/layouts/talks-and-workshops.njk
@@ -24,14 +24,14 @@ section: page
   <section class="two--column-50 container">
     <div id="talks">
       <h2>Talks</h2>
-      <p>A non-exhastive list of talks I have given over the years.</p>
+      <p>A non-exhaustive list of talks I have given over the years.</p>
 
       <a class="community--link" href="https://www.meetup.com/fedsa-community/events/274201526/" target="_blank" rel="noopener noreferrer">
         <h3>Modern layout on the web</h3>
       </a> 
       <span class="organisation">Devconf</span>
       <time>April, 2020</time>  
-      <p>Tracing the history of web layouts and a demonstration some of the new techniques at our disposal to create modern, designed interfaces with our new layout tools.</p>
+      <p>Tracing the history of web layouts and a demonstration of some of the new techniques at our disposal to create modern, designed interfaces with our new layout tools.</p>
 
       <a class="community--link" href="https://www.devconf.co.za/" target="_blank" rel="noopener noreferrer">
         <h3>Web typography: past, present and future</h3>
@@ -52,7 +52,7 @@ section: page
       </a>
       <span class="organisation">CTFEDS</span>
       <time>December 5, 2018</time>  
-      <p>A lighting talk on what variable fonts are and how we can use them in our work today.</p>
+      <p>A lightning talk on what variable fonts are and how we can use them in our work today.</p>
 
       <a class="community--link" href="https://www.meetup.com/fedsa-community/events/255017813/" target="_blank" rel="noopener noreferrer">
         <h3>Web typography: past, present and future</h3>
@@ -66,7 +66,7 @@ section: page
       </a>  
       <span class="organisation">UX South Africa Conference</span>
       <time>Ocotber, 2014</time>  
-      <p>A talk covering typography concepts, a short history of type on the web and a demonstration of advanced techniques for creating beautiful web typography.</p>
+      <p>A talk covering typography concepts, a short history of type on the web, and a demonstration of advanced techniques for creating beautiful web typography.</p>
 
 
       <a class="community--link" href="https://www.meetup.com/fedsa-community/events/195634562/" target="_blank" rel="noopener noreferrer">
@@ -74,14 +74,14 @@ section: page
       </a>
       <span class="organisation">CTFEDS</span>
       <time>July 31, 2014</time>  
-      <p>On the advantages of using front-end style guides, what they should contain and a practical demonstration of creating a style guide using Jekyll, a static site generator.</p>
+      <p>On the advantages of using front-end style guides, what they should contain, and a practical demonstration of creating a style guide using Jekyll, a static site generator.</p>
 
       <a class="community--link" href="https://www.meetup.com/fedsa-community/events/125756342/" target="_blank" rel="noopener noreferrer">
         <h3>Web typography now</h3>
       </a>
       <span class="organisation">CTFEDS</span>
       <time>June 27, 2013</time>  
-      <p>A talk covering typography concepts, a short history of type on the web and a demonstration of advanced techniques for creating beautiful web typography.</p>
+      <p>A talk covering typography concepts, a short history of type on the web, and a demonstration of advanced techniques for creating beautiful web typography.</p>
 
     </div>
     <div id="workshops">
@@ -92,28 +92,28 @@ section: page
       </a>
       <span class="organisation">CTFEDS</span>
       <time>September 14, 2019</time>  
-      <p>Workshop covering new CSS layout techniques including flexbox, grid, box-alignment, writing modes and many more.</p>
+      <p>Covering new CSS layout techniques including flexbox, grid, box-alignment, writing modes and many more.</p>
 
       <a class="community--link" href="https://www.meetup.com/fedsa-community/events/221386799/" target="_blank" rel="noopener noreferrer">
         <h3>CSS Grid workshop</h3>
       </a>
       <span class="organisation">CTFEDS</span>
       <time>June 2, 2018</time>  
-      <p>Workshop focussing on CSS grid and modern web layout techniques.</p>
+      <p>Focussing on CSS grid and modern web layout techniques.</p>
 
       <a class="community--link" href="https://www.meetup.com/fedsa-community/events/221386799/" target="_blank" rel="noopener noreferrer">
         <h3>Global Accessibility Awareness Day workshop</h3>
       </a>
       <span class="organisation">CTFEDS</span>
       <time>May 12, 2018</time>  
-      <p>Workshop focussing on accessibility for Global Accessibility Awareness Day. With <a href="https://naga.co.za/" target="_blank" rel="noopener noreferrer">Steve Barnett</a></p>
+      <p>Focussing on accessibility for Global Accessibility Awareness Day. With <a href="https://naga.co.za/" target="_blank" rel="noopener noreferrer">Steve Barnett.</a></p>
 
       <a class="community--link" href="https://www.meetup.com/Cape-Town-Scrum-User-Group-SUGSA/events/248915693/" target="_blank" rel="noopener noreferrer">
         <h3>Speak up! workshop: the fine art of sharing and presenting</h3>
       </a>
       <span class="organisation"> Scrum User Group Cape Town - SUGSA</span>
       <time>April 21, 2018</time>  
-      <p>Workshop on publice speaking. With <a href="https://naga.co.za/" target="_blank" rel="noopener noreferrer">Steve Barnett</a></p>
+      <p>Workshop on public speaking. With <a href="https://naga.co.za/" target="_blank" rel="noopener noreferrer">Steve Barnett.</a></p>
 
       <a class="community--link" href="https://www.meetup.com/fedsa-community/events/221386799/" target="_blank" rel="noopener noreferrer">
         <h3>CSS layouts: Flexible boxes and grid</h3>
@@ -127,35 +127,35 @@ section: page
       </a>
       <span class="organisation">Open Design</span>
       <time>August 19, 2017</time>  
-      <p>Workshop-style discussion in a Lean Coffee format sharing interesting things, getting inspired, and seeing how Front-end developers can change the world. With <a href="https://naga.co.za/" target="_blank" rel="noopener noreferrer">Steve Barnett</a></p>
+      <p>Workshop-style discussion in a Lean Coffee format sharing interesting things, getting inspired, and seeing how Front-end developers can change the world. With <a href="https://naga.co.za/" target="_blank" rel="noopener noreferrer">Steve Barnett.</a></p>
 
       <a class="community--link" href="https://www.meetup.com/fedsa-community/events/239478519/" target="_blank" rel="noopener noreferrer">
         <h3>Global Accessibility Awareness Day workshop</h3>
       </a>
       <span class="organisation">CTFEDS</span>
       <time>May 20, 2017</time>  
-      <p>Workshop focussing on accessibility for Global Accessibility Awareness Day. With <a href="https://naga.co.za/" target="_blank" rel="noopener noreferrer">Steve Barnett</a></p>
+      <p>Workshop focussing on accessibility for Global Accessibility Awareness Day. With <a href="https://naga.co.za/" target="_blank" rel="noopener noreferrer">Steve Barnett.</a></p>
 
       <a class="community--link" href="https://www.meetup.com/fedsa-community/events/235901778/" target="_blank" rel="noopener noreferrer">
         <h3>Web Typography workshop Part II</h3>
       </a>
       <span class="organisation">CTFEDS</span>
       <time>December 10, 2016</time>  
-      <p>Part II of a hands on practical workshop on getting web fonts to work and work well, concentrating on CSS typographic properties.</p>
+      <p>Part II of a hands-on practical workshop on getting web fonts to work and work well, concentrating on CSS typographic properties.</p>
 
       <a class="community--link" href="https://www.meetup.com/fedsa-community/events/233707890/" target="_blank" rel="noopener noreferrer">
         <h3>Web Typography workshop Part I</h3>
       </a>
       <span class="organisation">CTFEDS</span>
       <time>October 15, 2016</time>  
-      <p>Hands on practical workshop on getting web fonts to work and work well and approaching web fonts from an accessibility and performance point of view.</p>
+      <p>Hands on practical workshop on getting web fonts to work and work well, and approaching web fonts from an accessibility and performance point of view.</p>
 
       <a class="community--link" href="https://www.meetup.com/fedsa-community/events/230409560/" target="_blank" rel="noopener noreferrer">
         <h3>Open Design Cape Town special event</h3>
       </a>
       <span class="organisation">Open Design Cape Town</span>
       <time>August 20, 2016</time>  
-      <p>CTFEDs workshop as part of Open Design Cape Town festival focussing on accessibility, Universal Design, and Human-Centered Design. With <a href="https://naga.co.za/" target="_blank" rel="noopener noreferrer">Steve Barnett</a></p>
+      <p>CTFEDs workshop as part of The Open Design Cape Town festival focussing on accessibility, Universal Design, and Human-Centered Design. With <a href="https://naga.co.za/" target="_blank" rel="noopener noreferrer">Steve Barnett.</a></p>
 
 
       <a class="community--link" href="https://www.meetup.com/fedsa-community/events/223987693/" target="_blank" rel="noopener noreferrer">
@@ -163,7 +163,7 @@ section: page
       </a>
       <span class="organisation">CTFEDS</span>
       <time>May 14, 2016</time>  
-      <p>Workshop focussing on accessibility for Global Accessibility Awareness Day. With <a href="https://naga.co.za/" target="_blank" rel="noopener noreferrer">Steve Barnett</a></p>
+      <p>Workshop focussing on accessibility for Global Accessibility Awareness Day. With <a href="https://naga.co.za/" target="_blank" rel="noopener noreferrer">Steve Barnett.</a></p>
 
       <a class="community--link" href="https://uxsouthafrica.com/" target="_blank" rel="noopener noreferrer">
         <h3>Future Friendly UX Design</h3>
@@ -185,7 +185,7 @@ section: page
       </a>
       <span class="organisation">Open Design Cape Town</span>
       <time>August 22, 2015</time>  
-      <p>A hands-on workshop for making your web site even better. A CTFEDs event as part of the Open Design Cape Town festival. With <a href="https://naga.co.za/" target="_blank" rel="noopener noreferrer">Steve Barnett</a></p>
+      <p>A hands-on workshop for making your website even better. A CTFEDs event as part of the Open Design Cape Town festival. With <a href="https://naga.co.za/" target="_blank" rel="noopener noreferrer">Steve Barnett</a></p>
     </div>
   </section>
 
