--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -19,9 +19,9 @@
   <style>{{ css | cssmin | safe }}</style>
 
   <link href="/static/fonts/SchnyderM-Demi-Web.woff2" rel="preload" crossorigin="anonymous" as="font" type="font/woff2" >
-  <link href="/_includes/assets/css/main.css" rel="stylesheet preload" as="style">
+  <link href="/_includes/assets/css/main.css" rel="stylesheet preload" as="style"  onload="this.rel='stylesheet'">
 
-  <link rel="stylesheet" type="text/css" href="/_includes/assets/css/main.css">
+  <!-- <link rel="stylesheet" type="text/css" href="/_includes/assets/css/main.css"> -->
 <!-- 
   {% set js %}
     {% include "assets/js/inline.js" %}
