Fix: layout shift

--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -22,8 +22,8 @@
   <link href="/_includes/assets/css/main.css" rel="stylesheet preload" as="style"  onload="this.rel='stylesheet'">
 
   <!-- <link rel="stylesheet" type="text/css" href="/_includes/assets/css/main.css"> -->
-<!-- 
-  {% set js %}
+
+  <!-- {% set js %}
     {% include "assets/js/inline.js" %}
   {% endset %}
   <script>{{ js | jsmin | safe }}</script> -->
