Fix: about image on mobile

--- a/_includes/layouts/about.njk
+++ b/_includes/layouts/about.njk
@@ -12,7 +12,7 @@ section: page
       <p>As a team leader I relish the opportunity to build effective teams, workflows and toolsets, and to lead and support organisations in designing simple, accessible, cohesive and impactful user experiences.</p>
     </div>
     <figure class="page-image">
-      <img src="/static/images/justinslackportrait.JPG" alt="">
+      <img src="/static/images/justinslackportrait.JPG" alt="Photo of Justin Slack" class="portrait--justin">
     </figure>
   </section>
 </section>
