--- a/_includes/components/home-components/hero.njk
+++ b/_includes/components/home-components/hero.njk
@@ -68,8 +68,8 @@
     <h2 class="m-t-0">Times We Used To Spend</h2>
     <p class="lead"><a href="/show/"><em>Times We Used To Spend</em></a> is my monthly radio show, in which I play some records from my collection. It's hosted by <a href="https://www.mixcloud.com/TheOtherRadio/" target="_blank" rel="noopener noreferrer">The Other Radio</a>.</p>
     <section class="grid three--column--grid list--shows">
-      {% set showlist = collections.show %}
-      {% include "components/showlist.njk" %}
-    </div>
+      {% include "components/showlist-home.njk" %}
+    </section>
+    <p><a href="/show/">View all shows</a></p>
   </section>
 </div>
