--- a/_includes/layouts/about.njk
+++ b/_includes/layouts/about.njk
@@ -8,7 +8,7 @@ section: page
   <section class="two--column-50">
     <div>
       <p>I am a user interface designer, front-end developer and team leader with over twenty years’ experience designing and building web and mobile applications and sites.</p>
-      <p>I have worked as a designer and front-end developer on large scale financial services web applications, on award winning mobile applications, and am equally comfortable creating small scale community sites. I have a deep understanding of UI and front-end technologies and of the web as a platform, with a particluar interest in design systems, style guides and component-based UI libraries.</p>
+      <p>I have worked as a designer and front-end developer on large scale financial services web applications, on award winning mobile applications, and am equally comfortable creating small scale community sites. I have a deep understanding of UI and front-end technologies and of the web as a platform, with a particular interest in design systems, style guides and component-based UI libraries.</p>
       <p>As a team leader I relish the opportunity to build effective teams, workflows and toolsets, and to lead and support organisations in designing simple, accessible, cohesive and impactful user experiences.</p>
     </div>
     <figure class="page-image">
