Update show list

--- a/_includes/layouts/radio-shows.njk
+++ b/_includes/layouts/radio-shows.njk
@@ -46,7 +46,7 @@ permalink: /shows/index.html
 					Next show
 					<span class="sub--title">23 April 2021</span>
 				</h3>
-				<p class="show--summary">New stuff. Finally.</p>
+				<p class="show--summary">The people have spoken. 90s techno.</p>
 			</div>
 		</article>
 		{% set showlist = collections.show %} {% include "components/showlist.njk"
