--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -18,7 +18,7 @@
   {% endset %}
   <style>{{ css | cssmin | safe }}</style>
 
-  <link href="/static/fonts/SchnyderM-Demi-Web.woff2" rel="preload" as="font" type="font/woff2" crossorigin="anonymous">>
+  <link href="/static/fonts/SchnyderM-Demi-Web.woff2" rel="preload" as="font" type="font/woff2" crossorigin="anonymous">
   <link href="/_includes/assets/css/main.css" rel="stylesheet preload" as="style" onload="this.rel='stylesheet'">
 
   <!-- <link rel="stylesheet" type="text/css" href="/_includes/assets/css/main.css"> -->
