--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -2,7 +2,7 @@
 	font-family: "Schnyder M Web";
 	font-weight: 400;
 	font-style: normal;
-	font-display: swap;
+	font-display: block;
 	src: url("/static/fonts/schnyderm-demi-web.woff2") format("woff2");
 }
 
@@ -24,9 +24,9 @@ html {
 	height: 100%;
 	max-height: 100%;
 	-webkit-tap-highlight-color: transparent;
-	scrollbar-width: thin;
 	-ms-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
+	text-size-adjust: 100%;
 }
 
 
