Add preload to CSS

--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -21,8 +21,8 @@
 
 
 
-  
-  <link rel="stylesheet" type="text/css" href="/_includes/assets/css/main.css">
+  <link href="/_includes/assets/css/main.css" rel="stylesheet preload" as="style" onload="this.rel='stylesheet'">
+  <!-- <link rel="stylesheet" type="text/css" href="/_includes/assets/css/main.css"> -->
 
   <!-- {% set js %}
     {% include "assets/js/inline.js" %}
