Change show title

--- a/_includes/layouts/radio-shows.njk
+++ b/_includes/layouts/radio-shows.njk
@@ -46,7 +46,7 @@ permalink: /shows/index.html
 					Next show
 					<span class="sub--title">27 August 2021</span>
 				</h3>
-				<p class="show--summary">Broken beats part two</p>
+				<p class="show--summary">Photek</p>
 			</div>
 		</article>
 		{% set showlist = collections.show %} {% include "components/showlist.njk"
