Various copy updates

--- a/_includes/layouts/about.njk
+++ b/_includes/layouts/about.njk
@@ -10,6 +10,7 @@ section: page
       <p>I am a user interface designer, front-end developer and team leader with over twenty years’ experience designing and building web and mobile applications and sites.</p>
       <p>I have worked as a designer and front-end developer on large scale financial services web applications, on award winning mobile applications, and am equally comfortable creating small scale community sites. I have a deep understanding of UI and front-end technologies and of the web as a platform, with a particular interest in design systems, style guides and component-based UI libraries.</p>
       <p>As a team leader I relish the opportunity to build effective teams, workflows and toolsets, and to lead and support organisations in designing simple, accessible, cohesive and impactful user experiences.</p>
+      <p>You can also <a href="/static/JustinSlackCV2020.pdf">download my CV</a>.</p>
     </div>
     <figure class="page-image">
       <img src="/static/images/justinslackportrait.JPG" alt="Photo of Justin Slack" class="portrait--justin">
@@ -22,6 +23,7 @@ section: page
     <div>
       <h2>Community</h2>
       <p>Building communities is an essential part of what I do. In 2012 I co-founded the Cape Town Front-end Developer meetup and in 2019 the non-profit Front-end Developers South Africa. We have run over 80 monthly talks and workshops and at last count have over 2700 members.</p>
+      <p>Recently we started a monthly podcast which you can listen to on <a href="https://soundcloud.com/fedsa-community" target="_blank" rel="noopener noreferrer">Soundcloud</a>.</p>
       <p>In addition to organising community events I also <a href="/talks-and-workshops/#talks">speak</a> at conferences and meetups and have run a number of <a href="/talks-and-workshops/#workshops">workshops</a>. These include DevConf, UX South Africa, The Developer User Group, The Scrum User Group and The Cape Town Dribbble Community.</p>
       <p>I am a regular at the Codebridge Community Evening &ndash; a collaborative civic tech meetup &ndash; where I am part of a team of activists, designers, developers, data scientists and journalists working on a website and data platform for the Budget Justice Coalition, a civil society coalition that aims to collaboratively build people's participation in and understanding of South Africa's budget and planning processes.</p>
     </div>
