--- a/_includes/layouts/talks-and-workshops.njk
+++ b/_includes/layouts/talks-and-workshops.njk
@@ -23,6 +23,23 @@ section: page
 <div class="with-bg p-t-48 p-b-48">
   <section class="two--column-50 container">
     <div id="talks">
+
+      <h2>Podcasts</h2>
+
+      <a class="community--link" href="https://soundcloud.com/fedsa-community" target="_blank" rel="noopener noreferrer">
+        <h3>Front-end Development South Africa podcast</h3>
+      </a> 
+      <span class="organisation">FEDSA</span>
+      <time>2021</time>  
+      <p>The FEDSA podcast hosted by <a href="https://schalkventer.me/" target="_blank" rel="noopener noreferrer">Schalk Venter</a> and yours truly.</p>
+
+      <a class="community--link" href="https://soundcloud.com/zadevchat/episode-44-accessibility-with-steve-barnett-justin-slack" target="_blank" rel="noopener noreferrer">
+        <h3>Episode 44 - Accessibility with Steve Barnett & Justin Slack</h3>
+      </a> 
+      <span class="organisation">The ZADevChat Podcast</span>
+      <time>2016</time>  
+      <p>Kenneth & Len are joined by Steve Barnett and Justin Slack to talk about building accessible frontends.</p>
+
       <h2>Talks</h2>
       <p>A non-exhaustive list of talks I have given over the years.</p>
 
